--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,12 @@ code {
 .cards {
   display: flex;
 }
+
+.cards2 {
+
+  background-color: lightgrey;
+  padding: 2rem;
+  border: solid 1px black;
+  border-radius: 1rem;
+  margin: 1rem;
+}
